# QRGenerator

./: .gitignore  CMakeLists.txt  README.md  main.c
config/: alignment.conf  capacities.conf  ec_table_generator.py  error_correct_table.conf  remainder.conf
include/: Bitset.h  ErrorCorrect.h  QR.h  QRImage.h
src/: Bitset.c  DataAnalysis.c  Draw.c  ErrorCorrectCode.c  Masking.c  ModulePlacement.c  QR.c  ReedSolomon.c
test/: inputL  inputM  input_with_endlines  namecard
